--- a/movieDBapp/App/Layers/Presentation/PopularMovies/Cell/PopularMoviesCell.xib
+++ b/movieDBapp/App/Layers/Presentation/PopularMovies/Cell/PopularMoviesCell.xib
@@ -44,7 +44,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avengers: Endgame" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="PIe-Rw-gc3">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avengers: Endgame" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIe-Rw-gc3">
                         <rect key="frame" x="15" y="54" width="277" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="x9N-TB-7YI"/>
