--- a/movieDBapp/Base.lproj/Main.storyboard
+++ b/movieDBapp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FtT-2g-b1c">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,15 +15,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PopularMoviesViewController" customModule="movieDBapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T9G-0J-8F1">
-                                <rect key="frame" x="0.0" y="88" width="375" height="634"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="547"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="isk-sj-tUK">
-                                <rect key="frame" x="0.0" y="722" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="611" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
@@ -43,11 +43,100 @@
                     <connections>
                         <outlet property="searchBar" destination="isk-sj-tUK" id="OBR-zY-2gX"/>
                         <outlet property="tableView" destination="T9G-0J-8F1" id="ZuQ-bW-ZjH"/>
+                        <segue destination="GY5-u1-xPG" kind="show" id="Mox-LO-5SB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--Detail Of Movie View Controller-->
+        <scene sceneID="aRH-tu-YXS">
+            <objects>
+                <viewController id="GY5-u1-xPG" customClass="DetailOfMovieViewController" customModule="movieDBapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="va6-xp-2ro">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZB2-z6-ad7">
+                                <rect key="frame" x="0.0" y="64" width="375" height="211"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ZB2-z6-ad7" secondAttribute="height" multiplier="16:9" id="JGc-Df-0S6"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="khx-7d-Gcc">
+                                <rect key="frame" x="15" y="330" width="345" height="322"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kec-nQ-xeU">
+                                        <rect key="frame" x="0.0" y="0.0" width="36" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27.04.2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6j-su-GjE">
+                                        <rect key="frame" x="0.0" y="25.5" width="84" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HsD-Zl-0Cl">
+                                        <rect key="frame" x="0.0" y="51" width="55" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drama, comedy, action..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8G-D9-mfc">
+                                        <rect key="frame" x="0.0" y="76.5" width="190" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ApO-Yr-Eho">
+                                        <rect key="frame" x="0.0" y="102" width="71.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEa-oT-THM">
+                                        <rect key="frame" x="0.0" y="127.5" width="345" height="194.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="zEa-oT-THM" firstAttribute="leading" secondItem="khx-7d-Gcc" secondAttribute="leading" id="B07-0H-ohc"/>
+                                    <constraint firstAttribute="trailing" secondItem="zEa-oT-THM" secondAttribute="trailing" id="Mp4-iC-a7e"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeL-8l-NA1">
+                                <rect key="frame" x="15" y="285" width="345" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="WwG-SH-n8i"/>
+                                </constraints>
+                                <state key="normal" title="Watch Trailer"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="khx-7d-Gcc" secondAttribute="trailing" constant="15" id="7Do-Ny-953"/>
+                            <constraint firstItem="khx-7d-Gcc" firstAttribute="top" secondItem="qeL-8l-NA1" secondAttribute="bottom" constant="15" id="IHM-NP-dlM"/>
+                            <constraint firstItem="ZB2-z6-ad7" firstAttribute="leading" secondItem="LcC-RL-tMA" secondAttribute="leading" id="JUr-72-cW0"/>
+                            <constraint firstItem="LcC-RL-tMA" firstAttribute="bottom" secondItem="khx-7d-Gcc" secondAttribute="bottom" constant="15" id="QRp-PF-icw"/>
+                            <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="ZB2-z6-ad7" secondAttribute="trailing" id="VR2-Gw-idm"/>
+                            <constraint firstItem="qeL-8l-NA1" firstAttribute="top" secondItem="ZB2-z6-ad7" secondAttribute="bottom" constant="10" id="Yys-cb-CqE"/>
+                            <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="qeL-8l-NA1" secondAttribute="trailing" constant="15" id="f2Y-ZD-SKE"/>
+                            <constraint firstItem="qeL-8l-NA1" firstAttribute="leading" secondItem="LcC-RL-tMA" secondAttribute="leading" constant="15" id="jq3-Bq-NVE"/>
+                            <constraint firstItem="khx-7d-Gcc" firstAttribute="leading" secondItem="LcC-RL-tMA" secondAttribute="leading" constant="15" id="opc-uV-hf2"/>
+                            <constraint firstItem="ZB2-z6-ad7" firstAttribute="top" secondItem="LcC-RL-tMA" secondAttribute="top" id="s59-Zp-8ko"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LcC-RL-tMA"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gEZ-4R-uhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2055" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tOb-XI-k8u">
@@ -55,7 +144,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FtT-2g-b1c" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LC1-oY-noS">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
